poi新版界面样式

--- a/apps/newImeep/editor/templates/poiRightPanelTemp.html
+++ b/apps/newImeep/editor/templates/poiRightPanelTemp.html
@@ -49,8 +49,8 @@
                 <div class="blockDescLiDiv">
                     <span>{{$index === 0 ?'电话':''}}</span>
                 </div>
-                <input class="form-control poiRightPanel_Input" type="text" style="width: 42px"/>
-                <input class="form-control poiRightPanel_Input" type="text" style="width: 90px"/>
+                <input class="form-control poiRightPanel_Input" type="text" style="width: 48px"/>
+                <input class="form-control poiRightPanel_Input" type="text" style="width: 84px"/>
                 <img src="../../../../images/newPoi/rightPanelIcon/button-delete.png" style="padding-left: 8px" ng-click="deletePhone($index)">
                 <img src="../../../../images/newPoi/rightPanelIcon/button-add.png" ng-click="addPhone()" ng-show="$index === 0">
             </li>
@@ -65,7 +65,7 @@
                     <span>分类</span>
                 </div>
                 <select class="form-control poiRightPanel_select">
-                    <option>132323</option>
+                    <option>1323233</option>
                     <option>221212</option>
                     <option>33434</option>
                     <option>4212</option>
