--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -138,6 +138,7 @@
                         <button class="fm-top-btn blank" title="制作限高限重" ng-controller="addRdRelationCtrl" ng-click="addShape('RDHGWGLIMIT')">重</button>
                         <button class="fm-top-btn blank" title="制作卡车交限" ng-controller="addRdRelationCtrl" ng-click="addShape('RDRESTRICTIONTRUCK')">卡</button>
                         <button class="fm-top-btn blank" title="制作里程桩" ng-controller="addRdRelationCtrl" ng-click="addShape('RDMILEAGEPILE')">里</button>
+                        <!--<button class="fm-top-btn blank" title="制作TMC" ng-controller="addRdRelationCtrl" ng-click="addShape('RDTMCLOCATION')">TMC</button>-->
                     </div>
                 </div>
             </li>
