--- a/scripts/components/tools/tpls/assist-tools/thematicMapChooseTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/thematicMapChooseTpl.html
@@ -8,7 +8,7 @@
         </div>
         <div class="radio" ng-repeat="ThematicMap in ThematicMapArray">
             <label>
-                <input type="radio" name="optionsRadios" value={{ThematicMap.type}} ng-click="selectThematicMap(ThematicMap.type,$event)" >{{ThematicMap.name}}
+                <input type="radio" name="optionsRadios" value={{ThematicMap.type}} ng-click="selectThematicMap(ThematicMap,$event)" >{{ThematicMap.name}}
             </label>
         </div>
     </div>
