--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -205,6 +205,16 @@
                     </div>
                 </div>
             </li>
+            <li>
+                <div class="row" style="margin:0px;padding:0px;">
+                    <div class="col-md-3" style="text-align:center;">
+                        追踪选
+                    </div>
+                    <div class="col-md-9">
+                        <button class="fm-top-btn blank" title="追踪选RdLink" ng-controller="complexSelectCtrl" ng-click="selectShape('TRACK_RDLINK')">线</button>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
     <button class="fm-top-btn blank" title="执行检查" ng-click="openAdvancedToolsPanel('check')">检
