修改名称信息数量显示问题和捆绑删除问题，hotkeyEvent增加保存ETC方法

--- a/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectTpl.html
+++ b/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectTpl.html
@@ -9,7 +9,7 @@
                 <ul class="list-group list-group-lg m-b-none">
                     <li class="list-group-item">
                         <div class="list-name">
-                            <a ng-click="addRdName('name')" class="fm-cursor">名称（共 {{crfObjData.names.length}} 组）</a>
+                            <a ng-click="addRdName('name')" class="fm-cursor">名称（共 {{nameGroup.length}} 组）</a>
                         </div>
                         <div class="list-add-icon" ng-click="addRdName('name');">
                             <i class="glyphicon glyphicon-plus-sign"></i>
