--- a/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectNameTpl.html
+++ b/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectNameTpl.html
@@ -10,15 +10,15 @@
             <form>
                 <ul class="fm-ul fm-ul-form">
                     <li>
-                        <label>名称组</label>
+                        <label>名称组号</label>
                         <div >
                             <input type="text" readonly class="fm-control chosen-disabled" ng-model="info.nameGroupid"/>
                         </div>
                     </li>
                     <li>
-                        <label>名称组号</label>
+                        <label>名称号码</label>
                         <div >
-                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="info.nameId"/>
+                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="info.pid"/>
                         </div>
                     </li>
                     <li style="display: none;width: 95%;">
