--- a/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
@@ -40,13 +40,13 @@
         </div>
     </div>
 
-    <div class="fm-panel" >
+    <!--<div class="fm-panel" >
         <div class="title">
             <div>
                 <a ng-click="addTmcLocation()" style="cursor: pointer;color:#FFF;">TMC信息（共<span ng-if="rticData!=undefined">{{rticData.tmclocations.length}}</span>条）</a>
                 <span title="显示场景" class="glyphicon glyphicon-transfer" style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-click="showScene(3)"></span>
                 <span title="框选" class="glyphicon glyphicon-collapse-up" style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-click="selectTmcPoint();"></span>
-                <!--<span title="点选" class="glyphicon glyphicon-record" style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-click="selectTmcPoint();"></span>-->
+                &lt;!&ndash;<span title="点选" class="glyphicon glyphicon-record" style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-click="selectTmcPoint();"></span>&ndash;&gt;
                 <span title="自动追踪" ng-class='{"glyphicon": true,"glyphicon-check": autoTrack,"glyphicon-unchecked": !autoTrack}' style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-click="linkOfTruck();"></span>
             </div>
         </div>
@@ -60,7 +60,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div>-->
 
     <div class="fm-panel" >
         <div class="title">
