--- a/scripts/components/road/tpls/attr_zone_tpl/zoneNodeTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneNodeTpl.html
@@ -23,7 +23,7 @@
 		                    </div>
 		                </li>
 		                <li>
-		                    <label>图符号</label>
+		                    <label>图幅号</label>
 		                    <div>
 		                        <input type="text"  ng-model="zoneNodeData.meshId" class="chosen-disabled" disabled>
 		                    </div>
