--- a/less/editor_poi.less
+++ b/less/editor_poi.less
@@ -57,9 +57,12 @@
 }
 /*POI左侧照片展示样式*/
 .poiLeftPanel_container {
+  width: 560px;
   height:100%;
   background-color: #ffffff;
   box-shadow: 0 0 10px #93bbff;
+  font-family: "Microsoft Yahei", Verdana, Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 .poiLeftPanel {
   font-size: 12px;
@@ -224,6 +227,8 @@
   background-color: #ffffff;
   color: #ffffff;
   box-shadow: 0 0 10px #93bbff;
+  font-family: "Microsoft Yahei", Verdana, Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 
 .poiRightPanel_header {
@@ -263,6 +268,8 @@
   line-height: 40px;
   font-size: 14px;
   color: #636ef5;
+  border-top: 1px #d2e1ff;
+  border-top-style: solid;
   & >img {
     padding-left: 194px;
   }
