--- a/styles/imeep/editor_poi.css
+++ b/styles/imeep/editor_poi.css
@@ -46,9 +46,12 @@
 }
 /*POI左侧照片展示样式*/
 .poiLeftPanel_container {
+  width: 560px;
   height: 100%;
   background-color: #ffffff;
   box-shadow: 0 0 10px #93bbff;
+  font-family: "Microsoft Yahei", Verdana, Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 .poiLeftPanel {
   font-size: 12px;
@@ -217,6 +220,8 @@
   background-color: #ffffff;
   color: #ffffff;
   box-shadow: 0 0 10px #93bbff;
+  font-family: "Microsoft Yahei", Verdana, Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 .poiRightPanel_header {
   line-height: 40px;
@@ -251,6 +256,8 @@
   line-height: 40px;
   font-size: 14px;
   color: #636ef5;
+  border-top: 1px #d2e1ff;
+  border-top-style: solid;
 }
 .poiRightPanel_fold > img {
   padding-left: 194px;
